# graphframe-neo4j

./: .gitignore  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md  demo.md  docker-compose.yml  pyproject.toml
examples/: README.md  advanced_operations.py  basic_usage.py  live_demo.py
src/graphframe_neo4j/: __init__.py  graph.py
src/graphframe_neo4j/frames/: baseframe.py  compiler.py  edgeframe.py  nodeframe.py  pathframe.py
src/graphframe_neo4j/schema/: manager.py
src/graphframe_neo4j/util/: errors.py  typing.py
src/graphframe_neo4j/write/: advanced.py  upsert.py  writeplan.py
tests/integration/: conftest.py  test_basic_operations.py  test_neo4j_connection.py  test_nodeframe_execution.py  test_smoke.py
tests/unit/: test_compiler_edge_cases.py  test_comprehensive_scenarios.py  test_graph_basic.py  test_imports.py  test_networkx_integration.py  test_nodeframe_compilation.py  test_pandas_integration.py  test_readme_examples.py  test_traversal_compilation.py  test_traversal_edge_cases.py  test_write_operations.py  test_write_operations_compilation.py  test_writeplan_basic.py
